--- a/.github/workflows/ARMv8-Package.yml
+++ b/.github/workflows/ARMv8-Package.yml
@@ -78,7 +78,7 @@ jobs:
         PACKAGE_SOC: l1pro_qemu
         WHOAMI: Fxym
         KERNEL_VERSION_NAME: 5.15.13_6.1.5
-        KERNEL_AUTO_LATEST: true
+        KERNEL_AUTO_LATEST: false
         DISTRIB_REVISION: R${{ env.DATE1 }} by Fxym
 
     - name: Upload OpenWrt To Artifact
