--- a/configs/armv8-plus.config
+++ b/configs/armv8-plus.config
@@ -2,6 +2,7 @@ CONFIG_TARGET_armvirt=y
 CONFIG_TARGET_armvirt_64=y
 CONFIG_TARGET_armvirt_64_DEVICE_generic=y
 CONFIG_DEVEL=y
+CONFIG_AFALG_FALLBACK=y
 CONFIG_AFALG_UPDATE_CTR_IV=y
 CONFIG_ARIA2_ASYNC_DNS=y
 CONFIG_ARIA2_BITTORRENT=y
@@ -64,11 +65,9 @@ CONFIG_LAME-LIB_OPTIMIZE_SPEED=y
 CONFIG_LIBQMI_COLLECTION_BASIC=y
 CONFIG_LIBQMI_WITH_MBIM_QMUX=y
 CONFIG_LIBQMI_WITH_QRTR_GLIB=y
-CONFIG_LIBSODIUM_MINIMAL=y
 CONFIG_LIBSSH2_OPENSSL=y
 CONFIG_LUA_ECO_OPENSSL=y
 # CONFIG_LUA_ECO_WOLFSSL is not set
-CONFIG_LUCI_LANG_en=y
 CONFIG_MBEDTLS_AES_C=y
 CONFIG_MBEDTLS_CMAC_C=y
 CONFIG_MBEDTLS_DES_C=y
@@ -85,9 +84,6 @@ CONFIG_MBEDTLS_KEY_EXCHANGE_PSK_ENABLED=y
 CONFIG_MBEDTLS_NIST_KW_C=y
 CONFIG_MBEDTLS_RSA_NO_CRT=y
 CONFIG_MJPG_STREAMER_V4L2=y
-CONFIG_MODEMMANAGER_WITH_MBIM=y
-CONFIG_MODEMMANAGER_WITH_QMI=y
-CONFIG_MODEMMANAGER_WITH_QRTR=y
 CONFIG_NFS_KERNEL_SERVER_V4=y
 CONFIG_NGINX_HEADERS_MORE=y
 CONFIG_NGINX_HTTP_ACCESS=y
@@ -129,16 +125,20 @@ CONFIG_OCSERV_PROTOBUF=y
 CONFIG_OPENCONNECT_OPENSSL=y
 CONFIG_OPENSSH_LIBFIDO2=y
 # CONFIG_OPENSSL_ENGINE_BUILTIN_DEVCRYPTO is not set
+# CONFIG_OPENSSL_PREFER_CHACHA_OVER_GCM is not set
 CONFIG_OPENSSL_WITH_ARIA=y
 CONFIG_OPENSSL_WITH_BLAKE2=y
 CONFIG_OPENSSL_WITH_CAMELLIA=y
-CONFIG_OPENSSL_WITH_COMPRESSION=y
 CONFIG_OPENSSL_WITH_DTLS=y
 CONFIG_OPENSSL_WITH_EC2M=y
 # CONFIG_OPENSSL_WITH_ERROR_MESSAGES is not set
+CONFIG_OPENSSL_WITH_IDEA=y
+CONFIG_OPENSSL_WITH_MDC2=y
 CONFIG_OPENSSL_WITH_NPN=y
 CONFIG_OPENSSL_WITH_RFC3779=y
+CONFIG_OPENSSL_WITH_SEED=y
 CONFIG_OPENSSL_WITH_SM234=y
+CONFIG_OPENSSL_WITH_WHIRLPOOL=y
 CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
 CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
 CONFIG_OPENVPN_openssl_ENABLE_LZ4=y
@@ -161,7 +161,7 @@ CONFIG_PACKAGE_UnblockNeteaseMusic=y
 CONFIG_PACKAGE_UnblockNeteaseMusic-Go=y
 CONFIG_PACKAGE_acpid=y
 CONFIG_PACKAGE_adb=y
-CONFIG_PACKAGE_adbyby=y
+CONFIG_PACKAGE_alist=y
 CONFIG_PACKAGE_alsa-lib=y
 CONFIG_PACKAGE_alsa-ucm-conf=y
 CONFIG_PACKAGE_alsa-utils=y
@@ -199,6 +199,7 @@ CONFIG_PACKAGE_boost-date_time=y
 CONFIG_PACKAGE_boost-program_options=y
 CONFIG_PACKAGE_boost-random=y
 CONFIG_PACKAGE_boost-system=y
+CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_bsdtar=y
 CONFIG_PACKAGE_btrfs-progs=y
 CONFIG_PACKAGE_bzip2=y
@@ -215,20 +216,13 @@ CONFIG_PACKAGE_confuse=y
 CONFIG_PACKAGE_conntrack=y
 CONFIG_PACKAGE_conntrackd=y
 CONFIG_PACKAGE_containerd=y
-CONFIG_PACKAGE_coreutils=y
-CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-mktemp=y
 CONFIG_PACKAGE_coreutils-nohup=y
 CONFIG_PACKAGE_coreutils-realpath=y
 CONFIG_PACKAGE_coreutils-split=y
-CONFIG_PACKAGE_coreutils-timeout=y
 CONFIG_PACKAGE_dbus=y
-CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
-CONFIG_PACKAGE_ddns-scripts_freedns_42_pl=y
-CONFIG_PACKAGE_ddns-scripts_godaddy.com-v1=y
-CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
-CONFIG_PACKAGE_ddns-scripts_nsupdate=y
-CONFIG_PACKAGE_ddns-scripts_route53-v1=y
+ONFIG_PACKAGE_ddnsto=y
+ONFIG_PACKAGE_ddns-go=y
 CONFIG_PACKAGE_diffutils=y
 CONFIG_PACKAGE_dmesg=y
 # CONFIG_PACKAGE_dnsmasq_full_dhcpv6 is not set
@@ -248,8 +242,6 @@ CONFIG_PACKAGE_f2fsck=y
 CONFIG_PACKAGE_fdisk=y
 CONFIG_PACKAGE_fdk-aac=y
 CONFIG_PACKAGE_file=y
-CONFIG_PACKAGE_frpc=y
-CONFIG_PACKAGE_frps=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_gawk=y
 CONFIG_PACKAGE_getopt=y
@@ -257,11 +249,11 @@ CONFIG_PACKAGE_giflib-utils=y
 CONFIG_PACKAGE_glib2=y
 # CONFIG_PACKAGE_grub2-efi-arm is not set
 CONFIG_PACKAGE_gzip=y
-CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
 CONFIG_PACKAGE_hdparm=y
 CONFIG_PACKAGE_hostapd-common=y
 CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_hysteria=y
 CONFIG_PACKAGE_i2c-tools=y
 CONFIG_PACKAGE_iconv=y
 CONFIG_PACKAGE_iftop=y
@@ -269,6 +261,7 @@ CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ip6tables-extra=y
 CONFIG_PACKAGE_ip6tables-mod-nat=y
 CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_ipt2socks=y
 CONFIG_PACKAGE_iptables-mod-account=y
 CONFIG_PACKAGE_iptables-mod-chaos=y
 CONFIG_PACKAGE_iptables-mod-checksum=y
@@ -366,22 +359,25 @@ CONFIG_PACKAGE_kmod-crypto-deflate=y
 CONFIG_PACKAGE_kmod-crypto-des=y
 CONFIG_PACKAGE_kmod-crypto-ecdh=y
 CONFIG_PACKAGE_kmod-crypto-echainiv=y
+CONFIG_PACKAGE_kmod-crypto-fcrypt=y
 CONFIG_PACKAGE_kmod-crypto-gcm=y
 CONFIG_PACKAGE_kmod-crypto-gf128=y
 CONFIG_PACKAGE_kmod-crypto-ghash=y
 CONFIG_PACKAGE_kmod-crypto-hmac=y
+CONFIG_PACKAGE_kmod-crypto-hw-hifn-795x=y
+CONFIG_PACKAGE_kmod-crypto-hw-padlock=y
 CONFIG_PACKAGE_kmod-crypto-kpp=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20=y
 CONFIG_PACKAGE_kmod-crypto-lib-chacha20poly1305=y
 CONFIG_PACKAGE_kmod-crypto-lib-curve25519=y
 CONFIG_PACKAGE_kmod-crypto-lib-poly1305=y
+CONFIG_PACKAGE_kmod-crypto-md4=y
 CONFIG_PACKAGE_kmod-crypto-md5=y
 CONFIG_PACKAGE_kmod-crypto-michael-mic=y
 CONFIG_PACKAGE_kmod-crypto-rng=y
 CONFIG_PACKAGE_kmod-crypto-seqiv=y
 CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_PACKAGE_kmod-crypto-sha512=y
-# CONFIG_PACKAGE_kmod-cryptodev is not set
 CONFIG_PACKAGE_kmod-dax=y
 CONFIG_PACKAGE_kmod-dm=y
 CONFIG_PACKAGE_kmod-dnsresolver=y
@@ -392,7 +388,6 @@ CONFIG_PACKAGE_kmod-ebtables=y
 CONFIG_PACKAGE_kmod-ebtables-ipv4=y
 CONFIG_PACKAGE_kmod-ebtables-ipv6=y
 CONFIG_PACKAGE_kmod-ebtables-watchers=y
-CONFIG_PACKAGE_kmod-fast-classifier=m
 CONFIG_PACKAGE_kmod-fs-autofs4=y
 CONFIG_PACKAGE_kmod-fs-btrfs=y
 CONFIG_PACKAGE_kmod-fs-cifs=y
@@ -427,7 +422,6 @@ CONFIG_PACKAGE_kmod-hid-generic=y
 # CONFIG_PACKAGE_kmod-i2c-mux-pca954x is not set
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-ikconfig=y
-CONFIG_PACKAGE_kmod-inet-diag=y
 CONFIG_PACKAGE_kmod-input-core=y
 CONFIG_PACKAGE_kmod-input-evdev=y
 CONFIG_PACKAGE_kmod-ip6tables=y
@@ -525,10 +519,8 @@ CONFIG_PACKAGE_kmod-mt7916-firmware=y
 CONFIG_PACKAGE_kmod-mt7921-common=y
 CONFIG_PACKAGE_kmod-mt7921-firmware=y
 CONFIG_PACKAGE_kmod-mt7921e=y
-CONFIG_PACKAGE_kmod-mt792x-common=y
 # CONFIG_PACKAGE_kmod-mvpp2 is not set
 CONFIG_PACKAGE_kmod-netatop=y
-CONFIG_PACKAGE_kmod-netlink-diag=y
 CONFIG_PACKAGE_kmod-nf-ipt6=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-nf-ipvs-ftp=y
@@ -554,6 +546,8 @@ CONFIG_PACKAGE_kmod-oid-registry=y
 CONFIG_PACKAGE_kmod-phy-ax88796b=y
 # CONFIG_PACKAGE_kmod-phy-marvell is not set
 CONFIG_PACKAGE_kmod-phy-smsc=y
+CONFIG_PACKAGE_kmod-qmi_wwan_f=y
+CONFIG_PACKAGE_kmod-qmi_wwan_q=y
 CONFIG_PACKAGE_kmod-qrtr=y
 CONFIG_PACKAGE_kmod-qrtr-mhi=y
 CONFIG_PACKAGE_kmod-random-core=y
@@ -570,7 +564,6 @@ CONFIG_PACKAGE_kmod-rtl8192cu=y
 CONFIG_PACKAGE_kmod-rtl8723bs=y
 CONFIG_PACKAGE_kmod-rtlwifi=y
 CONFIG_PACKAGE_kmod-rtlwifi-usb=y
-CONFIG_PACKAGE_kmod-sched=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-sched-core=y
@@ -619,7 +612,6 @@ CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
 CONFIG_PACKAGE_kmod-usb-net-smsc95xx=y
 CONFIG_PACKAGE_kmod-usb-net-sr9700=y
 CONFIG_PACKAGE_kmod-usb-ohci=y
-CONFIG_PACKAGE_kmod-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-roles=y
 CONFIG_PACKAGE_kmod-usb-serial=y
 CONFIG_PACKAGE_kmod-usb-serial-ch341=y
@@ -674,7 +666,6 @@ CONFIG_PACKAGE_libdb47=y
 CONFIG_PACKAGE_libdbus=y
 CONFIG_PACKAGE_libdevmapper=y
 CONFIG_PACKAGE_libedit=y
-CONFIG_PACKAGE_libev=y
 CONFIG_PACKAGE_libevdev=y
 CONFIG_PACKAGE_libevent2=y
 CONFIG_PACKAGE_libexif=y
@@ -745,7 +736,6 @@ CONFIG_PACKAGE_librrd1=y
 CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libseccomp=y
 CONFIG_PACKAGE_libsensors=y
-CONFIG_PACKAGE_libsodium=y
 CONFIG_PACKAGE_libsoxr=y
 CONFIG_PACKAGE_libsqlite3=y
 CONFIG_PACKAGE_libssh2=y
@@ -755,7 +745,6 @@ CONFIG_PACKAGE_libtasn1=y
 CONFIG_PACKAGE_libtiff=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_libudev-zero=y
-CONFIG_PACKAGE_libudns=y
 CONFIG_PACKAGE_libunistring=y
 CONFIG_PACKAGE_libupnp=y
 CONFIG_PACKAGE_liburing=y
@@ -782,13 +771,10 @@ CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_lscpu=y
 CONFIG_PACKAGE_lsof=y
 CONFIG_PACKAGE_lua-cjson=y
+CONFIG_PACKAGE_lua-maxminddb=y
 CONFIG_PACKAGE_lua-md5=y
 CONFIG_PACKAGE_luasec=y
 CONFIG_PACKAGE_luasocket=y
-CONFIG_PACKAGE_luci-app-accesscontrol=y
-CONFIG_PACKAGE_luci-app-adbyby-plus=y
-CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-airplay2=y
 CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-aliyundrive-fuse is not set
 # CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
@@ -796,129 +782,51 @@ CONFIG_PACKAGE_luci-app-amlogic=y
 # CONFIG_PACKAGE_luci-app-amule is not set
 CONFIG_PACKAGE_luci-app-argon-config=y
 CONFIG_PACKAGE_luci-app-aria2=y
-CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-cifs-mount=y
 # CONFIG_PACKAGE_luci-app-cpufreq is not set
-CONFIG_PACKAGE_luci-app-ddns=y
-# CONFIG_PACKAGE_luci-app-ddnsto is not set
+CONFIG_PACKAGE_luci-app-ddnsto=y
+CONFIG_PACKAGE_luci-app-ddns-go=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-dockerman=y
-CONFIG_PACKAGE_luci-app-eqos=y
 CONFIG_PACKAGE_luci-app-filebrowser=y
 CONFIG_PACKAGE_luci-app-filetransfer=y
 CONFIG_PACKAGE_luci-app-firewall=y
-CONFIG_PACKAGE_luci-app-frpc=y
-CONFIG_PACKAGE_luci-app-frps=y
 # CONFIG_PACKAGE_luci-app-guest-wifi is not set
-CONFIG_PACKAGE_luci-app-haproxy-tcp=y
 CONFIG_PACKAGE_luci-app-hd-idle=y
-CONFIG_PACKAGE_luci-app-ikoolproxy=y
-CONFIG_PACKAGE_luci-app-ipsec-vpnd=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
-CONFIG_PACKAGE_luci-app-minidlna=y
-CONFIG_PACKAGE_luci-app-mjpg-streamer=y
-CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-msd_lite=y
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
-CONFIG_PACKAGE_luci-app-mwan3=y
-CONFIG_PACKAGE_luci-app-mwan3helper=y
-CONFIG_PACKAGE_luci-app-n2n=y
 CONFIG_PACKAGE_luci-app-netdata=y
 CONFIG_PACKAGE_luci-app-nfs=y
 CONFIG_PACKAGE_luci-app-nlbwmon=y
-CONFIG_PACKAGE_luci-app-nps=y
-CONFIG_PACKAGE_luci-app-oaf=y
-CONFIG_PACKAGE_luci-app-ocserv=y
 CONFIG_PACKAGE_luci-app-onliner=y
 CONFIG_PACKAGE_luci-app-openclash=y
-CONFIG_PACKAGE_luci-app-openvpn-server=y
-CONFIG_PACKAGE_luci-app-passwall=y
-CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall_Nftables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Rust_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan_GO=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_tuic_client=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Geodata=y
-CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray_Plugin=y
-CONFIG_PACKAGE_luci-app-passwall2=y
-CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall2_Nftables_Transparent_Proxy=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Brook=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_IPv6_Nat=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_Shadowsocks_Rust_Server=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-passwall2_INCLUDE_tuic_client=y
-CONFIG_PACKAGE_luci-app-pgyvpn=y
-CONFIG_PACKAGE_luci-app-phtunnel=y
 CONFIG_PACKAGE_luci-app-poweroff=y
-CONFIG_PACKAGE_luci-app-pptp-server=y
-CONFIG_PACKAGE_luci-app-pushbot=y
-CONFIG_PACKAGE_luci-app-qbittorrent=y
-CONFIG_PACKAGE_luci-app-qbittorrent_dynamic=y
+CONFIG_PACKAGE_luci-app-qbittorrent-simple=y
 # CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
 CONFIG_PACKAGE_luci-app-ramfree=y
 CONFIG_PACKAGE_luci-app-rclone=y
 # CONFIG_PACKAGE_luci-app-samba is not set
 CONFIG_PACKAGE_luci-app-samba4=y
 CONFIG_PACKAGE_luci-app-serverchan=y
-CONFIG_PACKAGE_luci-app-shairplay=y
-CONFIG_PACKAGE_luci-app-smartdns=y
-CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_luci-app-softethervpn=y
 CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_luci-app-ssrserver-python=y
-CONFIG_PACKAGE_luci-app-ssr-mudb-server=y
-CONFIG_PACKAGE_luci-app-ssr-plus=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Hysteria=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_IPT2Socks=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Kcptun=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_NaiveProxy=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Redsocks2=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Shadow_TLS=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Server=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
-CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Tuic_Client=y
 CONFIG_PACKAGE_luci-app-store=y
-CONFIG_PACKAGE_luci-app-syncdial=y
-CONFIG_PACKAGE_luci-app-tinyproxy=y
-CONFIG_PACKAGE_luci-app-transmission=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_OFFLOADING=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSFORWARDER=y
 CONFIG_PACKAGE_luci-app-turboacc_INCLUDE_DNSPROXY=y
-CONFIG_PACKAGE_luci-app-udpxy=y
 CONFIG_PACKAGE_luci-app-uhttpd=y
-CONFIG_PACKAGE_luci-app-unblockmusic=y
-CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_Go=y
-CONFIG_PACKAGE_luci-app-unblockmusic_INCLUDE_UnblockNeteaseMusic_NodeJS=y
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
-CONFIG_PACKAGE_luci-app-uugamebooster=y
-CONFIG_PACKAGE_luci-app-v2ray-server=y
-CONFIG_PACKAGE_luci-app-verysync=y
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-CONFIG_PACKAGE_luci-app-vsftpd=y
-CONFIG_PACKAGE_luci-app-vssr=y
-CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Kcptun=y
 # CONFIG_PACKAGE_luci-app-watchcat is not set
 # CONFIG_PACKAGE_luci-app-webadmin is not set
-CONFIG_PACKAGE_luci-app-wifischedule=y
 CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-wrtbwmon=y
-CONFIG_PACKAGE_luci-app-xlnetacc=y
 CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-compat=y
 CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-json=y
 CONFIG_PACKAGE_luci-proto-3g=y
@@ -931,6 +839,7 @@ CONFIG_PACKAGE_luci-proto-openconnect=y
 CONFIG_PACKAGE_luci-proto-qmi=y
 CONFIG_PACKAGE_luci-proto-vpnc=y
 CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_luci-theme-kucat=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-atmaterial=y
 CONFIG_PACKAGE_luci-theme-design=y
@@ -940,29 +849,15 @@ CONFIG_PACKAGE_luci-theme-netgear=y
 CONFIG_PACKAGE_luci-theme-opentomcat=y
 CONFIG_PACKAGE_mbim-utils=y
 CONFIG_PACKAGE_minicom=y
-CONFIG_PACKAGE_minidlna=y
-CONFIG_PACKAGE_mjpg-streamer=y
-CONFIG_PACKAGE_mjpg-streamer-input-file=y
-CONFIG_PACKAGE_mjpg-streamer-input-http=y
-CONFIG_PACKAGE_mjpg-streamer-input-uvc=y
-CONFIG_PACKAGE_mjpg-streamer-output-file=y
-CONFIG_PACKAGE_mjpg-streamer-output-http=y
-CONFIG_PACKAGE_mjpg-streamer-output-rtsp=y
-CONFIG_PACKAGE_mjpg-streamer-output-zmq=y
-CONFIG_PACKAGE_mjpg-streamer-www=y
 CONFIG_PACKAGE_mkhfs=y
 CONFIG_PACKAGE_mmc-utils=y
-CONFIG_PACKAGE_modemmanager=m
-CONFIG_PACKAGE_mosdns=y
 CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_msd_lite=y
 CONFIG_PACKAGE_mt7601u-firmware=y
 CONFIG_PACKAGE_mt7921bt-firmware=y
 CONFIG_PACKAGE_mt7922bt-firmware=y
 CONFIG_PACKAGE_musl-fts=y
-CONFIG_PACKAGE_mwan3=y
 CONFIG_PACKAGE_mxml=y
-CONFIG_PACKAGE_n2n=y
+CONFIG_PACKAGE_naiveproxy=y
 CONFIG_PACKAGE_nano-plus=y
 CONFIG_PACKAGE_netdata=y
 CONFIG_PACKAGE_netperf=y
@@ -993,8 +888,6 @@ CONFIG_PACKAGE_openssh-server=y
 CONFIG_PACKAGE_openssh-sftp-avahi-service=y
 CONFIG_PACKAGE_openssh-sftp-client=y
 CONFIG_PACKAGE_openssh-sftp-server=y
-CONFIG_PACKAGE_openvpn-easy-rsa=y
-CONFIG_PACKAGE_openvpn-openssl=y
 CONFIG_PACKAGE_p11-kit=y
 CONFIG_PACKAGE_p54-usb-firmware=y
 CONFIG_PACKAGE_p910nd=y
@@ -1042,7 +935,6 @@ CONFIG_PACKAGE_perlbase-unicode=y
 CONFIG_PACKAGE_perlbase-unicore=y
 CONFIG_PACKAGE_perlbase-utf8=y
 CONFIG_PACKAGE_perlbase-xsloader=y
-CONFIG_PACKAGE_pgyvpn=y
 CONFIG_PACKAGE_php8=y
 CONFIG_PACKAGE_php8-cgi=y
 CONFIG_PACKAGE_php8-fastcgi=y
@@ -1063,6 +955,7 @@ CONFIG_PACKAGE_php8-mod-xml=y
 CONFIG_PACKAGE_php8-mod-xmlreader=y
 CONFIG_PACKAGE_php8-mod-xmlwriter=y
 CONFIG_PACKAGE_php8-mod-zip=y
+CONFIG_PACKAGE_php8-pecl-redis=y
 CONFIG_PACKAGE_picocom=y
 CONFIG_PACKAGE_pigz=y
 CONFIG_PACKAGE_pptpd=y
@@ -1112,8 +1005,7 @@ CONFIG_PACKAGE_python3-urllib=y
 CONFIG_PACKAGE_python3-urllib3=y
 CONFIG_PACKAGE_python3-uuid=y
 CONFIG_PACKAGE_python3-xml=y
-CONFIG_PACKAGE_python3-yaml=y
-CONFIG_PACKAGE_qbittorrent=y
+CONFIG_PACKAGE_qBittorrent-Enhanced-Edition=y
 CONFIG_PACKAGE_qmi-utils=y
 CONFIG_PACKAGE_qos-scripts=y
 CONFIG_PACKAGE_qt5-core=y
@@ -1127,8 +1019,8 @@ CONFIG_PACKAGE_rclone=y
 CONFIG_PACKAGE_rclone-config=y
 CONFIG_PACKAGE_rclone-ng=y
 CONFIG_PACKAGE_rclone-webui-react=y
+CONFIG_PACKAGE_redsocks2=y
 CONFIG_PACKAGE_resize2fs=y
-CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_rpcbind=y
 CONFIG_PACKAGE_rpcd-mod-file=y
 CONFIG_PACKAGE_rpcd-mod-iwinfo=y
@@ -1170,22 +1062,17 @@ CONFIG_PACKAGE_samba4-server=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-local=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-redir=y
 CONFIG_PACKAGE_shadowsocks-libev-ss-server=y
-CONFIG_PACKAGE_shairplay=y
-CONFIG_PACKAGE_shairport-sync-openssl=y
-CONFIG_PACKAGE_smartdns=y
+CONFIG_PACKAGE_shadowsocksr-libev-ssr-server=y
 CONFIG_PACKAGE_smartmontools=y
-CONFIG_PACKAGE_sms-tool=y
 CONFIG_PACKAGE_snmp-mibs=y
 CONFIG_PACKAGE_snmp-utils=y
 CONFIG_PACKAGE_snmpd=y
-CONFIG_PACKAGE_socat=y
 CONFIG_PACKAGE_softethervpn5-bridge=y
 CONFIG_PACKAGE_softethervpn5-client=y
 CONFIG_PACKAGE_softethervpn5-libs=y
 CONFIG_PACKAGE_softethervpn5-server=y
 CONFIG_PACKAGE_speedtest-netperf=y
 CONFIG_PACKAGE_sqlite3-cli=y
-CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_sshpass=y
 CONFIG_PACKAGE_sshtunnel=y
 CONFIG_PACKAGE_strongswan=y
@@ -1215,12 +1102,13 @@ CONFIG_PACKAGE_taskset=y
 CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_terminfo=y
 CONFIG_PACKAGE_tini=y
-CONFIG_PACKAGE_transmission-daemon-openssl=y
-CONFIG_PACKAGE_transmission-web-control=y
 CONFIG_PACKAGE_tree=y
+CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_trojan-go=y
+CONFIG_PACKAGE_trojan-plus=y
 CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_tuic-client=y
 CONFIG_PACKAGE_ucert-full=y
-CONFIG_PACKAGE_udpxy=y
 CONFIG_PACKAGE_umbim=y
 CONFIG_PACKAGE_unrar=y
 CONFIG_PACKAGE_unzip=y
@@ -1228,15 +1116,13 @@ CONFIG_PACKAGE_uqmi=y
 CONFIG_PACKAGE_usb-modeswitch=y
 CONFIG_PACKAGE_usbids=y
 CONFIG_PACKAGE_usbutils=y
-CONFIG_PACKAGE_uugamebooster=y
 CONFIG_PACKAGE_uuidgen=y
+CONFIG_PACKAGE_v2ray-core=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
-CONFIG_PACKAGE_verysync=y
 CONFIG_PACKAGE_vim-fuller=y
 CONFIG_PACKAGE_vpnc=y
 CONFIG_PACKAGE_vpnc-scripts=y
-CONFIG_PACKAGE_wifischedule=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_wireless-regdb=y
 CONFIG_PACKAGE_wireless-tools=y
@@ -1295,11 +1181,8 @@ CONFIG_boost-variant-release=y
 # CONFIG_ATH9K_HWRNG is not set
 # CONFIG_BRCMFMAC_PCIE is not set
 # CONFIG_BRCMFMAC_USB is not set
-# CONFIG_DOCKER_OPTIONAL_FEATURES is not set
-# CONFIG_KERNEL_CGROUP_HUGETLB is not set
-# CONFIG_KERNEL_HUGETLBFS is not set
-# CONFIG_KERNEL_HUGETLB_PAGE is not set
 # CONFIG_PACKAGE_MAC80211_DEBUGFS is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-usb is not set
-CONFIG_PACKAGE_kmod-ipt-offload=y
+CONFIG_PACKAGE_kmod-cryptodev=y
+# CONFIG_PACKAGE_kmod-inet-diag is not set
 CONFIG_PACKAGE_kmod-phylink=y
