--- a/.github/workflows/ARMv8-Package.yml
+++ b/.github/workflows/ARMv8-Package.yml
@@ -77,7 +77,7 @@ jobs:
         OPENWRT_ARMVIRT: openwrt/bin/targets/*/*/*rootfs.tar.gz
         PACKAGE_SOC: l1pro_qemu
         WHOAMI: Fxym
-        KERNEL_VERSION_NAME: 5.4.260_5.4.269_6.1.63_6.1.70_6.1.75
+        KERNEL_VERSION_NAME: 5.4.260_6.1.63_6.1.70_6.1.75
         KERNEL_AUTO_LATEST: false
         DISTRIB_REVISION: R${{ env.DATE1 }} by Fxym
 
